--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   },
   "homepage": "https://github.com/ambassify/fetch-queued#readme",
   "dependencies": {
-    "node-fetch": "^1.6.3"
+    "@ambassify/fetch": "^2.1.0"
   },
   "devDependencies": {
     "eslint": "^3.12.2"
